    - reworked PES2TS remuxer code and added a mutex to synchronize input ringbuffer access

  2006-02-20: ffnetdev-0.1.0
    - optimize for DBOX2-Plugin VDR-Viewer https://developer.berlios.de/projects/vdrviewer/ (tested with vdrviewer-0.1.1)
    - add VNC compression (RRE, Hextile)
    - start learning remote if accept client, no more if start plugin
    - added "auto change primary DVB" feature (enable/deisable in plugin settings)
    - fixed buffer overflow bug
    - fixed several other bugs
    - tested with vdr-1.3.43
    
  2006-02-27:
    - fixed version conflict on cStreamDevice::PlayAudio
    
  2006-04-29
    - AC3-Streaming, compatible with vdr >= 1.3.47
    
  2006-05-03
    - Kleinigkeit am Anlernvorgang angepasst
    
  2006-05-08
    - add multi area OSD support. You can use all plugins and all skins.
    
  2006-05-16
    - fixing socket handle bug, reported from vdr-mailing list
    - allow to compile with VDR smaller than 10347
    
  2006-05-17
    - add ColorMap support
    
  2006-05-18
    - problem with OSD transparency on start fixed
    - #else, #elseif, #elif problem fixed
    - OSD-Transparenz bei VDRViewer bei Version 0.1.4 sollte wieder passen
    
  2006-05-19
    - fixed two bugs
  
  2006-06-10
    - fixed a Bug
    
  2007-01-16
    - auf PES-Streaming umgestellt
    
  2007-01-24
    - streamen bis ca. 6.6Mbit/s PES problemlos
    
  2007-01-31
    - ClientControl eingeführt
    
  2007-02-12
    - noch höhere Bitrate jetzt möglich
    - wiedergabe von DVD
    
  2007-02-18
    - vor- und zurückspulen mit versch. Geschwindigkeiten, Pause
    - DVD-Wedergabe macht Probleme
    
  2007-03-29
    - Workaround for Clear
    
  2007-07-02
    - sporadischen Fehler in VNC-Protokoll behoben
    
  2007-08-29:
    - Plugin lässt sich jetzt sauber beenden (beim beenden vom VDR gab es Probleme)
    
  2007-09-28: 
    - added compiling switch 'FFNETDEV_DEBUG'
    
  2009-07-02
    - fixed a Bug. Is now stable.
    