@@ -94,4 +94,7 @@ Changelog
     
   2009-07-02
     - fixed a Bug. Is now stable.
-    
+
+  2012-01-06: ffnetdev-0.1.2
+    - fixed two bugs: bug#741 (video freeze) and bug#742 (buffer overflow in
+      osdworker)    
